envoy/nslookup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nslookup
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nslookup
  template:
    metadata:
      labels:
        app: nslookup
        sidecar.istio.io/inject: "true"
      annotations:
        proxy.istio.io/config: |
          runtimeValues:
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
      - name: nslookup
        image: local/curl:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c", "sleep 100000"]

apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  ports:
  - protocol: "TCP"
    port: 12000
    targetPort: 12000
  selector:
    app: nslookup
